Fix a bug on Firefox were arrows didn't display well

--- a/app/styles/_results-menu.less
+++ b/app/styles/_results-menu.less
@@ -58,6 +58,7 @@
 	}
 
 	li {
+		position: relative;
 		display: block;
 		outline: none;
 		background: white;
@@ -155,8 +156,6 @@
 
 	.icon-right-dir,
 	.icon-left-dir {
-		position: relative;
-
 		&:before {
 			font-size: 20px;
 			position: absolute;
@@ -192,6 +191,7 @@
 }
 
 	.map-menu__bt--categories {
+		position: relative;
 		border-bottom-color: @green;
 		padding-left: 38px;
 
